test_regress/t/t_tagged_if.out
%Error-UNSUPPORTED: t/t_tagged_if.v:13:18: Unsupported: tagged union
   13 |    typedef union tagged {
      |                  ^~~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_tagged_if.v:14:7: Unsupported: void (for tagged unions)
   14 |       void Invalid;
      |       ^~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:19:18: Unsupported: tagged union
   19 |    typedef union tagged {
      |                  ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:23:13: Unsupported: tagged union
   23 |       union tagged {
      |             ^~~~~~
%Error: t/t_tagged_if.v:38:11: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
   38 |       v = tagged Invalid;
      |           ^~~~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_tagged_if.v:40:35: syntax error, unexpected ')', expecting '.' or tagged or .*
   40 |       if (v matches tagged Invalid)
      |                                   ^
%Error: t/t_tagged_if.v:47:11: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
   47 |       v = tagged Valid (42);
      |           ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:49:34: Unsupported: '{} tagged patterns
   49 |       if (v matches tagged Valid .n)
      |                                  ^
%Error-UNSUPPORTED: t/t_tagged_if.v:49:21: Unsupported: '{} tagged patterns
   49 |       if (v matches tagged Valid .n)
      |                     ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:49:13: Unsupported: matches operator
   49 |       if (v matches tagged Valid .n)
      |             ^~~~~~~
%Error: t/t_tagged_if.v:56:11: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
   56 |       v = tagged Valid (100);
      |           ^~~~~~
%Error: t/t_tagged_if.v:58:35: syntax error, unexpected ')', expecting '.' or tagged or .*
   58 |       if (v matches tagged Invalid)
      |                                   ^
%Error: t/t_tagged_if.v:65:15: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
   65 |       instr = tagged Jmp (tagged JmpC '{2'd1, 10'd256});
      |               ^~~~~~
%Error: t/t_tagged_if.v:67:36: syntax error, unexpected '(', expecting '.' or tagged or .*
   67 |       if (instr matches tagged Jmp (tagged JmpC '{cc:.c, addr:.a}))
      |                                    ^
%Error: t/t_tagged_if.v:74:15: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
   74 |       instr = tagged Jmp (tagged JmpC '{2'd2, 10'd128});
      |               ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:76:36: Unsupported: '{} tagged patterns
   76 |       if (instr matches tagged Jmp .j &&&
      |                                    ^
%Error-UNSUPPORTED: t/t_tagged_if.v:76:25: Unsupported: '{} tagged patterns
   76 |       if (instr matches tagged Jmp .j &&&
      |                         ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:76:17: Unsupported: matches operator
   76 |       if (instr matches tagged Jmp .j &&&
      |                 ^~~~~~~
%Error: t/t_tagged_if.v:77:33: syntax error, unexpected "'{", expecting '.' or tagged or .*
   77 |           j matches tagged JmpC '{cc:.c, addr:.a})
      |                                 ^~
%Error: t/t_tagged_if.v:84:11: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
   84 |       v = tagged Valid (75);
      |           ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:86:34: Unsupported: '{} tagged patterns
   86 |       if (v matches tagged Valid .n &&& (n > 50))
      |                                  ^
%Error-UNSUPPORTED: t/t_tagged_if.v:86:21: Unsupported: '{} tagged patterns
   86 |       if (v matches tagged Valid .n &&& (n > 50))
      |                     ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:86:13: Unsupported: matches operator
   86 |       if (v matches tagged Valid .n &&& (n > 50))
      |             ^~~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:86:37: Unsupported: &&& expression
   86 |       if (v matches tagged Valid .n &&& (n > 50))
      |                                     ^~~
%Error: t/t_tagged_if.v:93:11: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
   93 |       v = tagged Valid (25);
      |           ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:95:34: Unsupported: '{} tagged patterns
   95 |       if (v matches tagged Valid .n &&& (n > 50))
      |                                  ^
%Error-UNSUPPORTED: t/t_tagged_if.v:95:21: Unsupported: '{} tagged patterns
   95 |       if (v matches tagged Valid .n &&& (n > 50))
      |                     ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:95:13: Unsupported: matches operator
   95 |       if (v matches tagged Valid .n &&& (n > 50))
      |             ^~~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:95:37: Unsupported: &&& expression
   95 |       if (v matches tagged Valid .n &&& (n > 50))
      |                                     ^~~
%Error: t/t_tagged_if.v:102:11: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  102 |       v = tagged Valid (99);
      |           ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:104:34: Unsupported: '{} tagged patterns
  104 |       if (v matches tagged Valid .x) begin
      |                                  ^
%Error-UNSUPPORTED: t/t_tagged_if.v:104:21: Unsupported: '{} tagged patterns
  104 |       if (v matches tagged Valid .x) begin
      |                     ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:104:13: Unsupported: matches operator
  104 |       if (v matches tagged Valid .x) begin
      |             ^~~~~~~
%Error: t/t_tagged_if.v:111:15: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  111 |       instr = tagged Add '{5'd10, 5'd20, 5'd30};
      |               ^~~~~~
%Error: t/t_tagged_if.v:113:36: syntax error, unexpected "'{", expecting '.' or tagged or .*
  113 |       if (instr matches tagged Add '{.r1, .r2, .rd})
      |                                    ^~
%Error: t/t_tagged_if.v:120:15: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  120 |       instr = tagged Jmp (tagged JmpC '{2'd3, 10'd100});
      |               ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:124:36: Unsupported: '{} tagged patterns
  124 |       if (instr matches tagged Jmp .j &&&
      |                                    ^
%Error-UNSUPPORTED: t/t_tagged_if.v:124:25: Unsupported: '{} tagged patterns
  124 |       if (instr matches tagged Jmp .j &&&
      |                         ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:124:17: Unsupported: matches operator
  124 |       if (instr matches tagged Jmp .j &&&
      |                 ^~~~~~~
%Error: t/t_tagged_if.v:125:33: syntax error, unexpected "'{", expecting '.' or tagged or .*
  125 |           j matches tagged JmpC '{cc:.c, addr:.a}) begin
      |                                 ^~
%Error: t/t_tagged_if.v:132:27: syntax error, unexpected $stop
  132 |       if (result !== 100) $stop;
      |                           ^~~~~
%Error: t/t_tagged_if.v:137:36: syntax error, unexpected '(', expecting '.' or tagged or .*
  137 |       if (instr matches tagged Jmp (tagged JmpU .a))
      |                                    ^
%Error: t/t_tagged_if.v:141:27: syntax error, unexpected $stop
  141 |       if (result !== 512) $stop;
      |                           ^~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:146:36: Unsupported: '{} tagged patterns
  146 |       if (instr matches tagged Add .*)
      |                                    ^~
%Error-UNSUPPORTED: t/t_tagged_if.v:146:25: Unsupported: '{} tagged patterns
  146 |       if (instr matches tagged Add .*)
      |                         ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:146:17: Unsupported: matches operator
  146 |       if (instr matches tagged Add .*)
      |                 ^~~~~~~
%Error: t/t_tagged_if.v:147:17: syntax error, unexpected '=', expecting '('
  147 |          result = 1;
      |                 ^
%Error-UNSUPPORTED: t/t_tagged_if.v:148:41: Unsupported: '{} tagged patterns
  148 |       else if (instr matches tagged Jmp .*)
      |                                         ^~
%Error-UNSUPPORTED: t/t_tagged_if.v:148:30: Unsupported: '{} tagged patterns
  148 |       else if (instr matches tagged Jmp .*)
      |                              ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:148:22: Unsupported: matches operator
  148 |       else if (instr matches tagged Jmp .*)
      |                      ^~~~~~~
%Error: Exiting due to
